--- a/.github/workflows/psmodule.yml
+++ b/.github/workflows/psmodule.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: ApplicationInsights Module
 
 # Controls when the workflow will run
 on:
@@ -43,3 +43,8 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: results.sarif
+      - name: pester-tests-report
+        # You may pin to the exact commit or the version.
+        # uses: zyborg/pester-tests-report@bb711b31e93f78f7423086d57f81928325829765
+        uses: zyborg/pester-tests-report@v1.5.0
+        with:
