--- a/.github/workflows/psmodule.yml
+++ b/.github/workflows/psmodule.yml
@@ -47,3 +47,7 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: zyborg/pester-tests-report@bb711b31e93f78f7423086d57f81928325829765
         uses: zyborg/pester-tests-report@v1.5.0
+        with:
+          report_name: module_tests
+          report_title: Application Insights Module Tests
+          github_token: ${{ secrets.PESTER_MODULE }}
