added quick overview of test results

--- a/.github/workflows/psmodule.yml
+++ b/.github/workflows/psmodule.yml
@@ -51,3 +51,9 @@ jobs:
           report_name: module_tests
           report_title: Application Insights Module Tests
           github_token: ${{ secrets.PESTER_MODULE }}
+      - name: Test Results Quick Overview
+        shell: pwsh
+        run: |
+          Write-Host 'Total Tests Executed...:  ${{ steps.test_module.outputs.total_count }}'
+          Write-Host 'Total Tests PASSED.....:  ${{ steps.test_module.outputs.passed_count }}'
+          Write-Host 'Total Tests FAILED.....:  ${{ steps.test_module.outputs.failed_count }}'
