--- a/.github/workflows/psmodule.yml
+++ b/.github/workflows/psmodule.yml
@@ -5,7 +5,7 @@ name: ApplicationInsights Module
 # Controls when the workflow will run
 on:
   push:
-    branches: [ "main", "development", "pester" ]
+    branches: [ "main", "development" ]
   pull_request:
     branches: [ "main", "development" ]
   workflow_dispatch:
