--- a/.github/workflows/psmodule.yml
+++ b/.github/workflows/psmodule.yml
@@ -16,6 +16,7 @@ on:
         default: 'warning'
       tags:
         description: 'Test scenario tags'
+        default: 'Manual test'
 
 permissions:
   contents: read
@@ -37,8 +38,8 @@ jobs:
           path: .\
           recurse: true
           output: results.sarif
-          # excludeRule: '"PSAvoidGlobalVars"'
-          # ignorePattern: '.local'
+          excludeRule: '"PSAvoidGlobalVars"'
+          ignorePattern: '.local'
 
       # Upload the SARIF file generated in the previous step
       - name: Upload SARIF results file
